added flash message if user leaves either title or content blank for a new post

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     {%for blog in blogs %}
         <li>
             <a href="/single_template?id={{blog.id}}">{{blog.title}}</a>
+            <!-- <a href="/single_template/{{blog.id}}">{{blog.title}}</a> -->
           {{blog.content}}
       <!-- <input type="submit" value="Done!" /> -->
           <!-- <input type="submit" value="Create Blog!" /> -->
