--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,13 @@
     </head>
   <body>
 
+  {% with messages = get_flashed_messages(with_categories=True) %}
+      <div>
+        {% for category,message in messages %}
+          <li class="{{category}}">{{message}}</li>
+        {% endfor %}
+      </div>
+  {% endwith %}  
   <a href="http://127.0.0.1:5000/">Home</a> <a href="http://127.0.0.1:5000/new_post">New Post</a>
   <br />
   <br />
